# cowrite

./: .gitignore  .mcp.json  README.md  package.json  plan.md  tsconfig.base.json  writer-doc.schema.json
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/cursor/: AgentCursor.tsx  AgentCursorOverlay.tsx  AnnotationHighlightOverlay.tsx  CommentItem.tsx  PendingCommentInput.tsx  ReplyInput.tsx  ThreadCard.tsx  ThreadPanel.tsx
apps/desktop/src/components/editor/: BlockDragHandle.tsx  CommentToolbarButton.tsx  DisplaySettingsPopover.tsx  DocumentTitle.tsx  EditorView.tsx  FindReplaceBar.tsx  InlineCommentInput.tsx  ThreadPanelToggle.tsx  WriterCanvas.tsx
apps/desktop/src/components/layout/: AppShell.tsx  Sidebar.tsx
apps/desktop/src/components/persona/: CreatePersonaForm.tsx  (+6 more)
apps/desktop/src/lib/: documents.ts  editorBridge.ts  formatters.ts  searchPlugin.ts  selectionLayout.ts  textRects.ts  useAgentCommentWatcher.ts  useAutoSave.ts  useDocumentWatcher.ts  useEditorKeyboard.ts  usePersonasWatcher.ts  useRestoreLastDocument.ts
apps/desktop/src/store/: cursorStore.ts  displayStore.ts  documentStore.ts  patchStore.ts  personaStore.ts  searchStore.ts  selectionStore.ts  threadStore.ts  viewStore.ts
apps/desktop/tests/: selectionLayout.test.ts
apps/vscode/: README.md
scripts/: check-desktop-env.sh
