[package]
name = "cowrite-desktop"
version = "0.1.0"
description = "Cowrite desktop app"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2.4.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

